changed events to websocket

--- a/src/component/IFoodMerchantsGroup/style.module.scss
+++ b/src/component/IFoodMerchantsGroup/style.module.scss
@@ -1,8 +1,7 @@
 .container {
-    background: #303030;
-    color: #FFF;
-    border: 1px solid #FFF;
-    padding: 20px;
+    color: #202020;
+    border: 1px solid #202020;
+    padding: 15px;
     border-radius: 8px;
     user-select: none;
     cursor: pointer;
